5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1865_1643.log
== TEST (2019-07-04 10:05:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 
for i in range(nota): 
	if nota[i]>=5:
		print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:05:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 
for i in(nota): 
	if nota[i]>=5:
		print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:06:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 
for i in nota: 
	if (nota[i]>=5):
		print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:07:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:08:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
		print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:08:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
		print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:08:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
	print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:09:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:09:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:11:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtypr=int)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:11:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:12:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)

for i in range(v1):
	if i>= 5:
		print(i)
	



print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:12:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)

for i in range(v1):
	if i>= 5:
		print(i)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:12:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)

for i in range(size(v1)):
	if i>= 5:
		print(i)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:13:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)

for i in range(size(v1)):
	if i>= 5:
		i = i  + 1
		print(i)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:13:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)

for i in range(size(nota)):
	if i>= 5:
		i = i  + 1
		print(i)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:14:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)

for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:15:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)

j = 0
m = 0

for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		v1[i] = v1[i] + 1
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:16:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)

j = 0
m = 0

for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		v1[i] = v1[i] + 1
		print(v1)
	print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:16:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)

j = 0
m = 0

for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		v1[i] = v1[i] + 1
		print(v1)
print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:17:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)

j = 0
m = 0

for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:17:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
v1 = zeros(ap,dtype=int)

j = 0
m = 0

for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:19:25) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
j = 0
for j in range(size(nota)):
	if j>=5:
		print(j)



j = 0
m = 0


for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:19:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
j = 0
for j in range(size(nota)):
	if j>=5:
		print(j)



j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:20:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
j = 0
for j in range((nota)):
	if j>=5:
		print(j)



j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:20:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
j = 0
for j in nota:
	if j>=5:
		print(j)



j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:21:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
j = 0
for j in nota:
	if j>=5:
		j = j +1
		print(j)



j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:23:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
j = 0
for j in nota:
	if j>=5:
		j = j + 1
		print(j)

print(shape(nota))

j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:23:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in nota:
	if i>=5:
		i = i + 1
		print(i)

j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:23:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in nota:
	if i>=5:
		print(i)

j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(nota):
	if i>=5:
		print(i)

j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(size(nota)):
	if i>=5:
		print(i)

j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:39:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(size(nota)):

		print(i)

j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:39:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(size(nota)):

print(i)

j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
File "XXXX", line 14
    print(i)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(size(nota)):
	print(i)

j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(size(nota)):
	if nota[i]>=5:
	print(i)

j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
File "XXXX", line 14
    print(i)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(size(nota)):
	if nota[i]>=5:
		print(i)

j = 0
m = 0

v1 = zeros(3,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(size(nota)):
	if nota[i]>=5:
		print(i)

j = 0
m = 0

v1 = zeros(ap,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(size(nota)):
	if nota[i]>=5:
		print(i)

j = 0 #notas
m = 0 #v1

v1 = zeros(ap,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:43:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(size(nota)):
	if nota[i]>=5:
		print(i)

j = 0 #notas
m = 0 #v1

v1 = zeros(ap,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
for m in range(size(v1)):
	v1[i] = i
		
		
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(size(nota)):
	if nota[i]>=5:
		print(i)

j = 0 #notas
m = 0 #v1

v1 = zeros(ap,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
for m in range(size(v1)):
	v1[i] = i
	print(v1)	
		
print(v1)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

nota = array(eval(input("Notas: ")))
ap = 0 

for i in range(size(nota)): 
	if (nota[i]>=5):
		ap = ap + 1
print(ap)
i = 0
for i in range(size(nota)):
	if nota[i]>=5:
		print(i)

j = 0 #notas
m = 0 #v1

v1 = zeros(ap,dtype=int)
for j in range(size(nota)):
	if j>= 5:
		j = j  + 1
		nota[i] = v1[i] 
		print(v1)
		print(j)
for m in range(size(v1)):
	v1[m] = i
	print(v1)	
		
print(v1
	
	
	
	
	
-- ERROR:
File "XXXX", line 36
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
